--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,71 @@
 <resources>
     <string name="app_name">SBTS</string>
+    <string name="enter_your_email_address">Enter your email address</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="login">Login</string>
+    <string name="enter_your_phone_number">Enter your phone number</string>
+    <string name="submit">Submit</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="Login_URL">https://sbts2019.000webhostapp.com/app/login.php</string>
+    <string name="Absent_Students_URL">https://sbts2019.000webhostapp.com/app/absentStudentlist.php</string>
+    <string name="Location_Out_URL">https://sbts2019.000webhostapp.com/app/locationout.php</string>
+    <string name="Student_List_URL">https://sbts2019.000webhostapp.com/app/studentList.php</string>
+    <string name="Reset_Student_List_URL">https://sbts2019.000webhostapp.com/app/resetStudentList.php</string>
+    <string name="Attendee_URL">https://sbts2019.000webhostapp.com/app/attendee.php</string>
+    <string name="Upload_Profile_URL">https://sbts2019.000webhostapp.com/app/uploadprofile.php</string>
+    <string name="Parent_URL">https://sbts2019.000webhostapp.com/app/parent.php</string>
+    <string name="Upload_Profile_Parent_URL">https://sbts2019.000webhostapp.com/app/uploadprofileparent.php</string>
+    <string name="Reset_Password_URL">https://sbts2019.000webhostapp.com/app/resetpassword.php</string>
+    <string name="photo_Set_TEXT">Selected</string>
+    <string name="Mark_Present_URL">https://sbts2019.000webhostapp.com/app/markPresent.php</string>
+    <string name="Change_Password_URL">https://sbts2019.000webhostapp.com/app/changepassword.php</string>
+    <string name="Location_In_URL">https://sbts2019.000webhostapp.com/app/locationin.php</string>
+    <string name="Present_Students_URL">https://sbts2019.000webhostapp.com/app/presentStudentlist.php</string>
+    <string name="personal_details">Personal Details</string>
+    <string name="enter_your_full_name">Enter your full name</string>
+    <string name="date_of_birth_yyyy_mm_dd">Enter your date of birth (YYYY-MM-DD)</string>
+    <string name="select_your_gender">Select your gender</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="select_profile_photo">Select profile photo</string>
+    <string name="choose">choose</string>
+    <string name="alternate_mobile_no">Enter your alternate mobile number</string>
+    <string name="address_details">Address Details</string>
+    <string name="residential_address">Enter your residential address</string>
+    <string name="city">Enter the name of your city</string>
+    <string name="pin_code">Enter your pin-code</string>
+    <string name="student_details">Student Details</string>
+    <string name="id_no">Enter your childs ID Number</string>
+    <string name="name">Enter your childs name</string>
+    <string name="hybrid">Hybrid</string>
+    <string name="terrain">Terrain</string>
+    <string name="normal">Normal</string>
+    <string name="satelite">Satelite</string>
+    <string name="bus">Bus</string>
+    <string name="profile">Profile</string>
+    <string name="map">Map</string>
+    <string name="student_s_list">Student\'s List</string>
+    <string name="scanner">Scanner</string>
+    <string name="change_password">Change Password</string>
+    <string name="log_out">Log Out</string>
+    <string name="log_out">Log Out</string>
+    <string name="log_out">Log Out</string>
+    <string name="log_out">Log Out</string>
+    <string name="change_password">Change Password</string>
+    <string name="bus_location">Bus Location</string>
+    <string name="profile">Profile</string>
+    <string name="all">All</string>
+    <string name="present">Present</string>
+    <string name="absent">Absent</string>
+    <string name="enter_your_username">Enter your Username</string>
+    <string name="register_text">If your not a registered user click here to sign-up</string>
+    <string name="reset_password">Forgot Password?</string>
+    <string name="permission_needed">Permission Needed</string>
+    <string name="permission_required_message">Allow SBTS to access this device\'s location</string>
+    <string name="allow">Allow</string>
+    <string name="deny">DENY</string>
+    <string name="permission_granted">Permission Granted</string>
+    <string name="permission_denied">Permission Denied</string>
 </resources>
