--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,21 +8,21 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="Login_URL">https://sbts2019.000webhostapp.com/app/login.php</string>
-    <string name="Absent_Students_URL">https://sbts2019.000webhostapp.com/app/absentStudentlist.php</string>
-    <string name="Location_Out_URL">https://sbts2019.000webhostapp.com/app/locationout.php</string>
-    <string name="Student_List_URL">https://sbts2019.000webhostapp.com/app/studentList.php</string>
-    <string name="Reset_Student_List_URL">https://sbts2019.000webhostapp.com/app/resetStudentList.php</string>
-    <string name="Attendee_URL">https://sbts2019.000webhostapp.com/app/attendee.php</string>
-    <string name="Upload_Profile_URL">https://sbts2019.000webhostapp.com/app/uploadprofile.php</string>
-    <string name="Parent_URL">https://sbts2019.000webhostapp.com/app/parent.php</string>
-    <string name="Upload_Profile_Parent_URL">https://sbts2019.000webhostapp.com/app/uploadprofileparent.php</string>
-    <string name="Reset_Password_URL">https://sbts2019.000webhostapp.com/app/resetpassword.php</string>
+    <string name="Login_URL">https://sbts2022.000webhostapp.com/api/login.php</string>
+    <string name="Absent_Students_URL">https://sbts2022.000webhostapp.com/api/absentStudentlist.php</string>
+    <string name="Location_Out_URL">https://sbts2022.000webhostapp.com/api/locationout.php</string>
+    <string name="Student_List_URL">https://sbts2022.000webhostapp.com/api/studentList.php</string>
+    <string name="Reset_Student_List_URL">https://sbts2022.000webhostapp.com/api/resetStudentList.php</string>
+    <string name="Attendee_URL">https://sbts2022.000webhostapp.com/api/attendee.php</string>
+    <string name="Upload_Profile_URL">https://sbts2022.000webhostapp.com/api/uploadprofile.php</string>
+    <string name="Parent_URL">https://sbts2022.000webhostapp.com/api/parent.php</string>
+    <string name="Upload_Profile_Parent_URL">https://sbts2022.000webhostapp.com/api/uploadprofileparent.php</string>
+    <string name="Reset_Password_URL">https://sbts2022.000webhostapp.com/api/resetpassword.php</string>
     <string name="photo_Set_TEXT">Selected</string>
-    <string name="Mark_Present_URL">https://sbts2019.000webhostapp.com/app/markPresent.php</string>
-    <string name="Change_Password_URL">https://sbts2019.000webhostapp.com/app/changepassword.php</string>
-    <string name="Location_In_URL">https://sbts2019.000webhostapp.com/app/locationin.php</string>
-    <string name="Present_Students_URL">https://sbts2019.000webhostapp.com/app/presentStudentlist.php</string>
+    <string name="Mark_Present_URL">https://sbts2022.000webhostapp.com/api/markPresent.php</string>
+    <string name="Change_Password_URL">https://sbts2022.000webhostapp.com/api/changepassword.php</string>
+    <string name="Location_In_URL">https://sbts2022.000webhostapp.com/api/locationin.php</string>
+    <string name="Present_Students_URL">https://sbts2022.000webhostapp.com/api/presentStudentlist.php</string>
     <string name="personal_details">Personal Details</string>
     <string name="enter_your_full_name">Enter your full name</string>
     <string name="date_of_birth_yyyy_mm_dd">Enter your date of birth (YYYY-MM-DD)</string>
@@ -71,4 +71,5 @@
     <string name="username_error">Please enter your username</string>
     <string name="passoword_error">Please enter your password</string>
     <string name="enter_your_email">Enter your Email</string>
+    <string name="enter_email">\"Enter your email \"</string>
 </resources>
