--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,18 +44,17 @@
     <string name="normal">Normal</string>
     <string name="satelite">Satelite</string>
     <string name="bus">Bus</string>
-<!--    <string name="profile">Profile</string>-->
+    <!--    <string name="profile">Profile</string>-->
     <string name="map">Map</string>
     <string name="student_s_list">Student\'s List</string>
     <string name="scanner">Scanner</string>
-<!--    <string name="change_password">Change Password</string>-->
-<!--    <string name="log_out">Log Out</string>-->
-<!--    <string name="log_out">Log Out</string>-->
-<!--    <string name="log_out">Log Out</string>-->
+    <!--    <string name="change_password">Change Password</string>-->
+    <!--    <string name="log_out">Log Out</string>-->
+    <!--    <string name="log_out">Log Out</string>-->
+    <!--    <string name="log_out">Log Out</string>-->
     <string name="log_out">Log Out</string>
     <string name="change_password">Change Password</string>
     <string name="bus_location">Bus Location</string>
-    <string name="profile">Profile</string>
     <string name="all">All</string>
     <string name="present">Present</string>
     <string name="absent">Absent</string>
@@ -72,4 +71,16 @@
     <string name="passoword_error">Please enter your password</string>
     <string name="enter_your_email">Enter your Email</string>
     <string name="enter_email">\"Enter your email \"</string>
+    <string name="title_activity_main2">MainActivity2</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile">Profile</string>
 </resources>
