--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="Reset_Student_List_URL">https://sbts2022.000webhostapp.com/api/resetStudentList.php</string>
     <string name="Attendee_URL">https://sbts2022.000webhostapp.com/api/attendee.php</string>
     <string name="Upload_Profile_URL">https://sbts2022.000webhostapp.com/api/uploadprofile.php</string>
+    <string name="Parent_Registration_URL">https://sbts2022.000webhostapp.com/api/registerParent.php</string>
     <string name="Parent_URL">https://sbts2022.000webhostapp.com/api/parent.php</string>
     <string name="Driver_URL">https://sbts2022.000webhostapp.com/api/driver.php</string>
     <string name="Bus_URL">https://sbts2022.000webhostapp.com/api/busDetails.php</string>
