--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,9 @@
     <string name="drivers_list">Drivers List</string>
     <string name="parents_list">Parents List</string>
     <string name="bus_list_url">https://sbts2022.000webhostapp.com/api/busList.php</string>
+    <string name="driver_list_url">https://sbts2022.000webhostapp.com/api/driverList.php</string>
+    <string name="parent_list_url">https://sbts2022.000webhostapp.com/api/parentList.php</string>
+    <string name="request_list_url">https://sbts2022.000webhostapp.com/api/RegistrationRequests.php</string>
+    <string name="registration_requests">Registration Requests</string>
+    <string name="approve">Approve</string>
 </resources>
