--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="Attendee_URL">https://sbts2022.000webhostapp.com/api/attendee.php</string>
     <string name="Upload_Profile_URL">https://sbts2022.000webhostapp.com/api/uploadprofile.php</string>
     <string name="Parent_Registration_URL">https://sbts2022.000webhostapp.com/api/registerParent.php</string>
+    <string name="Attendee_Registration_URL">https://sbts2022.000webhostapp.com/api/registerAttendee.php</string>
+    <string name="Driver_Registration_URL">https://sbts2022.000webhostapp.com/api/registerDriver.php</string>
     <string name="Parent_URL">https://sbts2022.000webhostapp.com/api/parent.php</string>
     <string name="Driver_URL">https://sbts2022.000webhostapp.com/api/driver.php</string>
     <string name="Bus_URL">https://sbts2022.000webhostapp.com/api/busDetails.php</string>
@@ -105,4 +107,12 @@
     <string name="approve">Approve</string>
     <string name="approved">Approved</string>
     <string name="attendee_list">Attendee List</string>
+    <string name="age">Age</string>
+    <string name="full_name">Full Name</string>
+    <string name="email">Email</string>
+    <string name="mobile">Mobile</string>
+    <string name="alternate_mobile">Alternate mobile</string>
+    <string name="aadhaar_detail">Aadhaar Detail</string>
+    <string name="aadhaar_no">Aadhaar no</string>
+    <string name="add_driver">add driver</string>
 </resources>
