--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="Mark_Present_URL">https://sbts2022.000webhostapp.com/api/markPresent.php</string>
     <string name="Change_Password_URL">https://sbts2022.000webhostapp.com/api/changepassword.php</string>
     <string name="Location_In_URL">https://sbts2022.000webhostapp.com/api/locationin.php</string>
+    <string name="bus_locations_url">https://sbts2022.000webhostapp.com/api/bus_locations.php</string>
     <string name="Present_Students_URL">https://sbts2022.000webhostapp.com/api/presentStudentlist.php</string>
     <string name="personal_details">Personal Details</string>
     <string name="enter_your_full_name">Enter your full name</string>
