update bus number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -137,4 +137,7 @@
     <string name="yyyy_mm_dd">YYYY-MM-DD</string>
     <string name="age">Age</string>
     <string name="add_student">Add Student</string>
+    <string name="apply">Apply</string>
+    <string name="bus_no_url">https://sbts2022.000webhostapp.com/api/bus_no_list.php</string>
+    <string name="update_bus_no">https://sbts2022.000webhostapp.com/api/update_bus_no.php</string>
 </resources>
