Added Title on Login Page and Grammatical Corrections

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">SBTS</string>
-    <string name="enter_your_email_address">Enter your email address</string>
-    <string name="enter_your_password">Enter your password</string>
+    <string name="enter_your_email_address">Enter your Email</string>
+    <string name="enter_your_password">Provide Password</string>
     <string name="login">Login</string>
-    <string name="enter_your_phone_number">Enter your phone number</string>
+    <string name="enter_your_phone_number">Enter your Mobile Number</string>
     <string name="submit">Submit</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -30,21 +30,21 @@
     <string name="Location_In_URL">https://sbts2022.000webhostapp.com/api/locationin.php</string>
     <string name="bus_locations_url">https://sbts2022.000webhostapp.com/api/bus_locations.php</string>
     <string name="Present_Students_URL">https://sbts2022.000webhostapp.com/api/presentStudentlist.php</string>
-    <string name="personal_details">Personal Details</string>
-    <string name="enter_your_full_name">Enter your full name</string>
-    <string name="date_of_birth_yyyy_mm_dd">Enter your date of birth (YYYY-MM-DD)</string>
-    <string name="select_your_gender">Select your gender</string>
+    <string name="personal_details">Parent Sign-up</string>
+    <string name="enter_your_full_name">Enter your Full Name</string>
+    <string name="date_of_birth_yyyy_mm_dd">Enter your DOB (YYYY-MM-DD)</string>
+    <string name="select_your_gender">Select your Gender</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
     <string name="select_profile_photo">Select profile photo</string>
     <string name="choose">choose</string>
-    <string name="alternate_mobile_no">Enter your alternate mobile number</string>
+    <string name="alternate_mobile_no">Enter your Alternate Mobile Number</string>
     <string name="address_details">Address Details</string>
-    <string name="residential_address">Enter your residential address</string>
-    <string name="city">Enter the name of your city</string>
-    <string name="pin_code">Enter your pin-code</string>
-    <string name="id_no">Enter your childs ID Number</string>
-    <string name="name">Enter your childs name</string>
+    <string name="residential_address">Enter your Residential Address</string>
+    <string name="city">City</string>
+    <string name="pin_code">Enter PIN</string>
+    <string name="id_no">Enter your Child\'s ID Number</string>
+    <string name="name">Enter your Child\'s name</string>
     <string name="hybrid">Hybrid</string>
     <string name="terrain">Terrain</string>
     <string name="normal">Normal</string>
@@ -65,18 +65,18 @@
     <string name="present">Present</string>
     <string name="absent">Absent</string>
     <string name="enter_your_username">Enter your Username</string>
-    <string name="register_text">If your not a registered user click here to sign-up</string>
+    <string name="register_text">If you\'re not a registered user, click here to sign-up</string>
     <string name="reset_password">Forgot Password?</string>
     <string name="permission_needed">Permission Needed</string>
     <string name="permission_required_message">Allow SBTS to access this device\'s location</string>
     <string name="allow">Allow</string>
-    <string name="deny">DENY</string>
+    <string name="deny">Deny</string>
     <string name="permission_granted">Permission Granted</string>
     <string name="permission_denied">Permission Denied</string>
     <string name="username_error">Please enter your username</string>
     <string name="passoword_error">Please enter your password</string>
     <string name="enter_your_email">Enter your Email</string>
-    <string name="enter_email">\"Enter your email \"</string>
+    <string name="enter_email">\"Enter your Email \"</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
@@ -112,8 +112,8 @@
     <string name="mobile">Mobile</string>
     <string name="alternate_mobile">Alternate mobile</string>
     <string name="aadhaar_detail">Aadhaar Detail</string>
-    <string name="aadhaar_no">Aadhaar no</string>
-    <string name="add_driver">add driver</string>
+    <string name="aadhaar_no">Aadhaar Number</string>
+    <string name="add_driver">Add Driver</string>
     <string name="bus_details">Bus Details</string>
     <string name="bus_name">Bus Name</string>
     <string name="vehicle_model">Vehicle Model</string>
@@ -123,13 +123,13 @@
     <string name="add_bus_url">https://sbts2022.000webhostapp.com/api/addBus.php</string>
     <string name="student_details">Student Details</string>
     <string name="student_name">Student Name</string>
-    <string name="father_name">Father Name</string>
-    <string name="mother_name">Mother Name</string>
+    <string name="father_name">Father\'s Name</string>
+    <string name="mother_name">Mother\'s Name</string>
     <string name="male_female">Male/Female</string>
     <string name="email">Email</string>
     <string name="address">Address</string>
     <string name="city_name">City</string>
-    <string name="pincode">Pin code</string>
+    <string name="pincode">PIN</string>
     <string name="student_id">Student Id</string>
     <string name="roll_no">Roll No</string>
     <string name="className">Class</string>
